Fixed z-index issue with .home children elements. Needed position: relative.

--- a/src/components/home/css/home.css
+++ b/src/components/home/css/home.css
@@ -8,6 +8,7 @@
   height: 100%;
   margin: 0px;
   padding: 0px;
+  z-index: 0;
   /* display: flex;
   flex-direction: row;
   justify-content: space-evenly; */
@@ -28,8 +29,7 @@
   position: absolute;
   bottom: 0px;
   lefT: 0px;
-  width: 700px;
-  border: 1px solid green;
+  width: 650px;
 }
 .witch {
   position: absolute;
@@ -39,11 +39,13 @@
 }
 
 .message-container {
+  position: relative;
   width: 30%;
   margin: 0 auto;
   padding: 4px 20px;
   background-color: #232324;
   border: 1px solid #6d6d75;
+  z-index: 1;
 }
 .message-container p {
   text-align: center;
